tests/bonsai/error/lambda-empty-body.bonsai
func foo() -> i32 {
    // Currently, lambdas with no body are illegal.
    L1 = |x: i32| { };

    return 0;
}
