tests/bonsai/error/lambda-empty-body.expect
---CODE---
1
---STDERR---
[internal] Error: src/Parser/Parser.cpp:59
tests/bonsai/error/lambda-empty-body.bonsai:3:21: [parse error] unexpected token: rsquiggle

    L1 = |x: i32| { };
                    ^
